realizando ajustes ao projeto e inserindo conteúdos nos services do projeto

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,15 +14,15 @@
      * color-2(#eb5e55)
      * color-3(#f2d0a4)
      */
-    --color-1: hsla(345, 93%, 44%, 1);
+    --color-1: rgb(219, 125, 17);
     --color-2: hsla(4, 79%, 63%, 1);
     --color-3: hsla(34, 75%, 80%, 1);
 
     /* theme color variations */
     --color-1-lighter: hsla(345, 93%, 64%, 1);
-    --color-1-light  : hsla(345, 93%, 54%, 1);
-    --color-1-dark   : hsla(345, 93%, 34%, 1);
-    --color-1-darker : hsla(345, 93%, 24%, 1);
+    --color-1-light  : rgb(245, 129, 21);
+    --color-1-dark   : rgb(154, 6, 167);
+    --color-1-darker : rgb(245, 119, 2);
     --color-2-lighter: hsla(4, 79%, 83%, 1);
     --color-2-light  : hsla(4, 79%, 73%, 1);
     --color-2-dark   : hsla(4, 79%, 53%, 1);
@@ -2252,223 +2252,6 @@ input::-moz-focus-inner {
 }
 
 
-/* ------------------------------------------------------------------- 
- * ## skillbars
- * ------------------------------------------------------------------- */
-.skill-bars {
-    list-style: none;
-    margin: var(--vspace-2) 0 var(--vspace-1);
-}
-
-.skill-bars li {
-    height: .4rem;
-    background: var(--color-white);
-    width: 100%;
-    margin-bottom: calc(var(--vspace-2) - .4rem);
-    padding: 0;
-    position: relative;
-}
-
-.skill-bars li strong {
-    position: absolute;
-    left: 0;
-    top: calc((var(--vspace-1) * 1.25) * -1);
-    font-family: var(--font-2);
-    font-weight: 500;
-    color: var(--color-white);
-    text-transform: uppercase;
-    letter-spacing: .2em;
-    font-size: 1.4rem;
-    line-height: var(--vspace-0_75);
-}
-
-.skill-bars li .progress {
-    background: var(--color-1);
-    position: relative;
-    height: 100%;
-}
-
-.skill-bars li .progress span {
-    position: absolute;
-    right: 0;
-    top: calc((var(--vspace-1) + .8rem) * -1);
-    display: block;
-    font-family: var(--font-2);
-    color: var(--color-white);
-    font-size: 1rem;
-    line-height: 1;
-    background: var(--color-black);
-    padding: calc(0.25 * var(--space)) calc(0.25 * var(--space));
-    border-radius: 4px;
-}
-
-.skill-bars li .progress span::after {
-    position: absolute;
-    left: 50%;
-    bottom: -10px;
-    margin-left: -5px;
-    width: 0;
-    height: 0;
-    border: 5px solid transparent;
-    border-top-color: var(--color-black, var(--color-black));
-    content: "";
-}
-
-.skill-bars li .percent5 {
-    width: 5%;
-}
-.skill-bars li .percent10 {
-    width: 10%;
-}
-.skill-bars li .percent15 {
-    width: 15%;
-}
-.skill-bars li .percent20 {
-    width: 20%;
-}
-.skill-bars li .percent25 {
-    width: 25%;
-}
-.skill-bars li .percent30 {
-    width: 30%;
-}
-.skill-bars li .percent35 {
-    width: 35%;
-}
-.skill-bars li .percent40 {
-    width: 40%;
-}
-.skill-bars li .percent45 {
-    width: 45%;
-}
-.skill-bars li .percent50 {
-    width: 50%;
-}
-.skill-bars li .percent55 {
-    width: 55%;
-}
-.skill-bars li .percent60 {
-    width: 60%;
-}
-.skill-bars li .percent65 {
-    width: 65%;
-}
-.skill-bars li .percent70 {
-    width: 70%;
-}
-.skill-bars li .percent75 {
-    width: 75%;
-}
-.skill-bars li .percent80 {
-    width: 80%;
-}
-.skill-bars li .percent85 {
-    width: 85%;
-}
-.skill-bars li .percent90 {
-    width: 90%;
-}
-.skill-bars li .percent95 {
-    width: 95%;
-}
-.skill-bars li .percent100 {
-    width: 100%;
-}
-
-.alert-box {
-    padding: var(--vspace-0_75) 4rem var(--vspace-0_75) 3.2rem;
-    position: relative;
-    margin-bottom: var(--vspace-1);
-    border-radius: 4px;
-    font-family: var(--font-1);
-    font-weight: 500;
-    font-size: var(--text-sm);
-    line-height: var(--vspace-0_75);
-}
-
-.alert-box__close {
-    position: absolute;
-    display: block;
-    right: 1.6rem;
-    top: 1.6rem;
-    cursor: pointer;
-    width: 12px;
-    height: 12px;
-}
-
-.alert-box__close::before, 
-.alert-box__close::after {
-    content: '';
-    position: absolute;
-    display: inline-block;
-    width: 2px;
-    height: 12px;
-    top: 0;
-    left: 5px;
-}
-
-.alert-box__close::before {
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-.alert-box__close::after {
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-}
-
-.alert-box--error {
-    background-color: var(--color-error);
-    color: var(--color-error-content);
-}
-
-.alert-box--error .alert-box__close::before, 
-.alert-box--error .alert-box__close::after {
-    background-color: var(--color-error-content);
-}
-
-.alert-box--success {
-    background-color: var(--color-success);
-    color: var(--color-success-content);
-}
-
-.alert-box--success .alert-box__close::before, 
-.alert-box--success .alert-box__close::after {
-    background-color: var(--color-success-content);
-}
-
-.alert-box--info {
-    background-color: var(--color-info);
-    color: var(--color-info-content);
-}
-
-.alert-box--info .alert-box__close::before, 
-.alert-box--info .alert-box__close::after {
-    background-color: var(--color-info-content);
-}
-
-.alert-box--notice {
-    background-color: var(--color-notice);
-    color: var(--color-notice-content);
-}
-
-.alert-box--notice .alert-box__close::before, 
-.alert-box--notice .alert-box__close::after {
-    background-color: var(--color-notice-content);
-}
-
-.wide {
-    max-width: var(--width-wide);
-}
-.wider {
-    max-width: var(--width-wider);
-}
-.narrow {
-    max-width: var(--width-narrow);
-}
-.narrower {
-    max-width: var(--width-narrower);
-}
 
 .section-title {
     display: block;
