--- a/css/styles.css
+++ b/css/styles.css
@@ -2468,9 +2468,11 @@ input::-moz-focus-inner {
 }
 
 .s-header__logo img {
-    width: 68px;
-    height: 10px;
-    margin-bottom: 0;
+    width: 148px;
+    height: 48px;
+    margin-bottom: 30px;
+    margin-right: 30px;
+    padding-right: 20px;
 }
 
 /*  main navigation  */
@@ -2486,7 +2488,7 @@ input::-moz-focus-inner {
     line-height: 6rem;
     padding-top: 1.4rem;
     padding-bottom: 1.4rem;
-    margin: 0;
+    margin: 12;
     text-transform: uppercase;
     letter-spacing: .4em;
 }
@@ -2502,7 +2504,7 @@ input::-moz-focus-inner {
 .s-header__nav li {
     display: inline-block;
     padding-left: 0;
-    margin: 0 1rem;
+    margin: 0 2rem;
 }
 
 
@@ -3361,7 +3363,7 @@ html.no-csstransitions .s-hero__content {
 }
 
 .s-about__photo {
-    background-image: url(../images/logoBranca.beratech.sistemas.png);
+    background-image: url(../images/logoBeratechEmAlta.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
